--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "type": "module",
   "dependencies": {
     "@svelte-put/clickoutside": "^3.0.1",
-    "nprogress": "^0.2.0"
+    "nprogress": "^0.2.0",
+    "tailwind-merge": "^2.2.1"
   }
 }
