--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.0.0",
+    "tslib": "^2.4.1",
     "vite": "^5.0.3",
     "vitest": "^1.2.0"
   },
@@ -27,19 +28,26 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test": "vitest",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write ."
   },
   "type": "module",
   "dependencies": {
+    "@internationalized/date": "^3.5.2",
+    "@jill64/svelte-toast": "^1.3.20",
     "@svelte-put/clickoutside": "^3.0.1",
+    "bits-ui": "^0.19.4",
     "clsx": "^2.1.0",
+    "cmdk-sv": "^0.0.15",
+    "formsnap": "^0.5.1",
     "lucide-svelte": "^0.340.0",
     "nprogress": "^0.2.0",
+    "sveltekit-superforms": "^2.6.2",
     "tailwind-merge": "^2.2.1",
-    "tailwind-variants": "^0.2.0"
+    "tailwind-variants": "^0.2.0",
+    "zod": "^3.22.4"
   }
 }
