--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/eslint": "8.56.0",
     "autoprefixer": "^10.4.17",
-    "daisyui": "4.6.1",
+    "daisyui": "4.6.3",
     "eslint": "9.0.0-alpha.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
@@ -17,9 +17,10 @@
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-headless-table": "^0.18.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.0.0",
     "tslib": "^2.4.1",
+    "typescript": "^5.0.0",
     "vite": "^5.0.3",
     "vitest": "^1.2.0"
   },
@@ -43,8 +44,9 @@
     "clsx": "^2.1.0",
     "cmdk-sv": "^0.0.15",
     "formsnap": "^0.5.1",
-    "lucide-svelte": "^0.340.0",
+    "lucide-svelte": "^0.359.0",
     "nprogress": "^0.2.0",
+    "svelte-radix": "^1.1.0",
     "sveltekit-superforms": "^2.6.2",
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.2.0",
