--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "private": true,
   "scripts": {
-    "dev": "vite dev",
+    "dev": "bunx -- bun vite dev",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
