--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@types/eslint": "8.56.0",
     "autoprefixer": "^10.4.17",
     "daisyui": "4.6.3",
-    "eslint": "9.0.0-alpha.2",
+    "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.35.1",
+    "eslint-plugin-svelte": "^2.44.0",
     "postcss": "^8.4.33",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
